--- a/package.json
+++ b/package.json
@@ -6,11 +6,13 @@
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
     "lint": "vue-cli-service lint",
-    "fetch_data": "cd src/scripts && node getData.js"
+    "fetch_data": "cd src/scripts && node getData.js",
+    "export_data": "cd src/scripts && node exportData.js"
   },
   "dependencies": {
     "axios": "^0.19.2",
     "core-js": "^3.6.4",
+    "d3": "^3.5.17",
     "vue": "^2.6.11"
   },
   "devDependencies": {
